Extend support for http:request (#334)
* Add support for headers

* Implement support for query and uri params

* Add path builder

* Add proper comment

* Fix var definition

* Fix regexp import